--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106"
